--- a/_sass/components/_navbar.scss
+++ b/_sass/components/_navbar.scss
@@ -6,13 +6,13 @@ body > header {
   --link-hover-color: var(--primary-text);
   padding: var(--padding-xs);
 
-  width: 100vw;
+  width: 100cqw;
   display: grid;
   grid-template-columns:
     minmax(
       min-content,
       calc(
-        (100vw - var(--main-width)) / 2 - var(--padding-xs) - var(--padding-sm)
+        (100cqw - var(--main-width)) / 2 - var(--padding-xs) - var(--padding-sm)
       )
     )
     minmax(min-content, var(--main-width)) auto max-content;
