--- a/_sass/pages/_conference.scss
+++ b/_sass/pages/_conference.scss
@@ -7,7 +7,7 @@
     margin: 0;
     background-color: white;
     z-index: 100;
-    width: 100vw;
+    width: 100cqw;
     padding-left: 15vw;
     margin-left: -15vw;
     margin-bottom: 30px;
